floating menus - scroll issues #41426

Closed
opened 2014-08-13 12:27:18 +02:00 by Cezary Kopias · 15 comments

System Information
Win7x64 GTX660M

Blender Version
Broken: 2.71.3

Short description of error
Scroll arrows on search floating panel dont work.

Exact steps for others to reproduce the error
Just hit spacebar on 3dview and try to scroll entries using scroll arrows.
This is working fine on menu entries like specials in edit mode
(make blender window small enouch to test it)

**System Information** Win7x64 GTX660M **Blender Version** Broken: 2.71.3 **Short description of error** Scroll arrows on search floating panel dont work. **Exact steps for others to reproduce the error** Just hit spacebar on 3dview and try to scroll entries using scroll arrows. This is working fine on menu entries like specials in edit mode (make blender window small enouch to test it)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @kopias

Added subscriber: @kopias

#41461 was marked as duplicate of this issue

#41461 was marked as duplicate of this issue
Campbell Barton was assigned by Bastien Montagne 2014-08-15 14:37:40 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Think this never worked this way in this case, arrows are only here to indicate you have other invisible items afaik?

Anyway, there is another issue here, which is scrolling with mouse wheel does not work anymore - this might be another glitch from the 'autodefault' new feature, Campbell, so assigning that report to you for now.

Think this never worked this way in this case, arrows are only here to indicate you have other invisible items afaik? Anyway, there is another issue here, which is scrolling with mouse wheel does not work anymore - this might be another glitch from the 'autodefault' new feature, Campbell, so assigning that report to you for now.
Bastien Montagne changed title from search floating panel scroll arrows to search floating panel - scroll issues 2014-08-15 14:38:11 +02:00
Bastien Montagne changed title from search floating panel - scroll issues to floating menus - scroll issues 2014-08-16 14:45:23 +02:00

Added subscriber: @Druban

Added subscriber: @Druban

◀ Merged tasks: #41461.

◀ Merged tasks: #41461.

Yes, arrows were never clickable, but the scroll wheel selection worked up to the last stable 270a. To reiterate what I said in #41461(so you don't have to look there too), the scroll wheel selection now only works when the mouse is in the text entry field, not anywhere in the menu.

Yes, arrows were never clickable, but the scroll wheel selection worked up to the last stable 270a. To reiterate what I said in #41461(so you don't have to look there too), the scroll wheel selection now only works when the mouse is in the text entry field, not anywhere in the menu.
Author

It just needs to work like face menu in edit mode:
example.mp4

It just needs to work like face menu in edit mode: [example.mp4](https://archive.blender.org/developer/F104800/example.mp4)

Added subscriber: @zeauro

Added subscriber: @zeauro

As a workaround, you can scroll the list using up/down arrows on your keyboard.
I am wondering if it is not a kind of new UI paradigm choïce.

As a workaround, you can scroll the list using up/down arrows on your keyboard. I am wondering if it is not a kind of new UI paradigm choïce.
Campbell Barton was unassigned by Bastien Montagne 2014-08-18 12:46:33 +02:00
Bastien Montagne self-assigned this 2014-08-18 12:46:33 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by de12cd706f

This issue was referenced by de12cd706f1f9f12f675dfc118ae68b2c0701d82

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit de12cd706f.

Closed by commit de12cd706f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41426
No description provided.