Fix T41426: floating menus - scroll issues.

Do not reset active but if cursor is not over it when getting mousewheel events.